hphp/hack/test/typecheck/this_param.php.exp
File "this_param.php", line 23, characters 16-19:
Invalid argument (Typing[4110])
File "this_param.php", line 17, characters 23-26:
This is the expression dependent type <static>
File "this_param.php", line 23, characters 5-9:
  where '<static>' refers to the late bound type of the enclosing class
File "this_param.php", line 21, characters 24-26:
It is incompatible with an object of type Foo
